<package format="2">
  <name>desired_joint_publisher</name>
  <version>0.1.0</version>
  <description>
    This package contains a tool for setting and publishing joint state values for a given URDF.
  </description>
  <author email="zhiee.poh@httechnology.com">Poh Zhi-Ee</author>
  <maintainer email="zhiee.poh@httechnology.com">Poh Zhi-Ee</maintainer>

  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2_control_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
